--- a/Housing_DataBlitz.ipynb
+++ b/Housing_DataBlitz.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM62n8vlq1B2WNsM6l+eqPd",
+      "authorship_tag": "ABX9TyNeF5jgvlZysBTqeD9Qey4q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,15 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn import linear_model, metrics"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **1. Load the dataset**"
+      ],
+      "metadata": {
+        "id": "SkaZbt8u_GsO"
+      }
     },
     {
       "cell_type": "code",
@@ -326,6 +335,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Removing null values\n",
+        "Filling the null values using mean of total bedrooms column. "
+      ],
+      "metadata": {
+        "id": "V5f2p5L8_cUz"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "mean_total_bedrooms = df['total_bedrooms'].mean()"
@@ -382,6 +401,16 @@
           "execution_count": 35
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Converting string values to integer values\n",
+        "by creating a list and using if conditions converted the string values to integer values"
+      ],
+      "metadata": {
+        "id": "7tu1iONN_6sD"
+      }
     },
     {
       "cell_type": "code",
@@ -662,6 +691,16 @@
           "execution_count": 56
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 4. Find correlation to reduce dimensions\n",
+        "the correlation between total_bedrooms and total_rooms is high and the correlation between population and households is high, so dropped both total_rooms and population columns. "
+      ],
+      "metadata": {
+        "id": "RNSnbURnAKtD"
+      }
     },
     {
       "cell_type": "code",
@@ -1235,6 +1274,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 5. Splitting the data for training and testing\n",
+        "Split the dataset for traing and testing of 80 and 20 percent respectively."
+      ],
+      "metadata": {
+        "id": "ZMvONUXqAs5l"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)"
@@ -1296,6 +1345,15 @@
           "execution_count": 72
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6. Fitting the train and test dataset with LinearRegression model"
+      ],
+      "metadata": {
+        "id": "3ewsgqpzBDrb"
+      }
     },
     {
       "cell_type": "code",
